# AI_Eval

./: .env.example  .gitignore  .pre-commit-config.yaml  .security_terms.example  ARCHITECTURE.md  CONTRIBUTING.md  DevPlan.md  LICENSE  README.md  SECURITY.md  StartHere.md  config.py  pii_terms.example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  security_scan.sh
.github/workflows/: ci.yml  release.yml
configs/: default.yaml
docs/: RESEARCH_SYNTHESIS.md  TEST_SUITE_SPEC.md
evaluations/: README.md
reports/: README.md
scripts/: security_scan.sh
src/: __init__.py  __main__.py  cli.py  mcp_server.py
src/benchmarks/: __init__.py  datasets.py  runner.py
src/evaluation/: __init__.py  config.py  model_discovery.py  report.py  runner.py  scorers.py
src/export/: __init__.py  catalog_exporter.py
src/profiling/: __init__.py  hardware.py
src/providers/: __init__.py  base.py  google_provider.py  ollama_provider.py
src/reporting/: __init__.py  readme_updater.py  report_generator.py
src/reporting/templates/: benchmark_report.md.j2  evaluation_report.md.j2
src/scoring/: __init__.py  llm_judge.py  pass_k.py  rag_metrics.py
tests/: conftest.py  test_catalog_exporter.py  test_eval_config.py  test_eval_report.py  test_eval_runner.py  test_eval_scorers.py  test_example.py  test_marker_parser.py  test_mcp_server.py  test_model_discovery.py  test_readme_updater.py  test_report_generator.py  test_tdd_example.py
utils/: code_validator.py  exceptions.py  logging_config.py  marker_parser.py  path_guard.py  plugin_loader.py  rate_limiter.py  retry.py  state_machine.py
