[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_eval"
version = "0.1.0"
description = "Model evaluation and benchmarking projects (LLM, ML, embeddings)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "ollama>=0.4.0",
    "google-genai>=1.0.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "deepeval>=2.0.0",
    "psutil>=5.9.0",
    "numpy>=1.26.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
    "httpx>=0.27.0",
]

[project.scripts]
ai-eval = "src.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "matplotlib",
    "mutmut>=3.0",
]



[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "requires_mlx: marks tests that require MLX (Apple Silicon)",
    "tdd: marks tests written during active TDD cycles",
]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

[tool.mutmut]
paths_to_mutate = "src/"
tests_dir = "tests/"
runner = "python -m pytest -x -q --tb=no"

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]